// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharityGrid renders with title prop 1`] = `
<Container>
  <CharityGridHeader
    title="Trending"
  />
  <CardGroup
    itemsPerRow={4}
  />
  <Divider />
</Container>
`;

exports[`CharityGrid renders without divider 1`] = `
<Container>
  <CharityGridHeader />
  <CardGroup
    itemsPerRow={4}
  />
</Container>
`;
